@@ -1,5 +1,7 @@
 2002-09-18  Andrew Cagney  <ac131313@redhat.com>
 
+	* ada-lang.c, ada-tasks.c, ada-valprint.c: Import from mainline.
+
 	* infrun.c (signal_stop_update): Convert definition to ISO C.
 	(signal_print_update): Ditto.
 	(signal_pass_update): Ditto.
